--- a/service/src/main/resources/templates/index.html
+++ b/service/src/main/resources/templates/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head lang="de">
     <title>gdv-xport</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <link href="../static/css/theme.css"
+          th:href="@{css/theme.css}" rel="stylesheet" media="screen"/>
 </head>
+
 <body>
     <h1>GDV.XPort-Services</h1>
     <p>
-        Die GDV.XPport-Services bauen auf der gdv.xport-Library auf und bieten
+        Die GDV.XPort-Services bauen auf der gdv.xport-Library auf und bieten
         die darin enhaltene Java-API &uuml;ber REST-Services auch f&uuml;r andere
         Sprachen an.
     </p>
 </body>
+
 </html>
