--- a/service/src/main/resources/static/css/theme.css
+++ b/service/src/main/resources/static/css/theme.css
@@ -3,8 +3,17 @@
  */
 
 body {
-    background-color: antiquewhite;
+    background-color: whitesmoke;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 12pt;
     font-style: normal;
+}
+
+.footer {
+    font-size: x-small;
+    text-align: right;
+}
+
+.container-fluid {
+    background-color: antiquewhite;
 }
