--- a/service/src/main/resources/templates/index.html
+++ b/service/src/main/resources/templates/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout"
+      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:schemaLocation="http://www.ultraq.net.nz/thymeleaf/layout ">
 
 <head lang="de">
-    <title>gdv-xport</title>
+    <title>gdv.xport</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.4/css/bootstrap.min.css"
-          th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}"
-          rel="stylesheet" media="screen" />
-    <script src="http://cdn.jsdelivr.net/webjars/jquery/2.1.4/jquery.min.js"
-            th:src="@{/webjars/jquery/3.1.1-1/jquery.min.js}"></script>    <link href="../static/css/theme.css"
-          th:href="@{css/theme.css}" rel="stylesheet" media="screen"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="../static/css/theme.css" th:href="@{/css/theme.css}"/>
 </head>
 
 <body>
-    <!-- add bootstrap styling -->
-    <div class="container">
-        <div class="jumbotron">
-            <h1>GDV.XPort-Services</h1>
-            <p>
-                Die GDV.XPort-Services bauen auf der gdv.xport-Library auf und bieten
-                die darin enhaltene Java-API &uuml;ber REST-Services auch f&uuml;r andere
-                Sprachen an.
-            </p>
-        </div>
+<!-- add bootstrap styling -->
+<div class="container">
+    <h1 layout:fragment="header">gdv.xport</h1>
+    <div layout:fragment="content">
+        <h1>GDV.XPort-Services</h1>
+        <p>
+            Die GDV.XPort-Services bauen auf der gdv.xport-Library auf und bieten
+            die darin enhaltene Java-API &uuml;ber REST-Services auch f&uuml;r andere
+            Sprachen an.
+        </p>
     </div>
+</div>
 </body>
 
 </html>
