favicon is shown now in browser

--- a/service/src/main/resources/templates/index.html
+++ b/service/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
 <body>
 <!-- add bootstrap styling -->
 <div class="container">
-    <h1 layout:fragment="header">gdv.xport</h1>
+    <h1 layout:fragment="header">Global Header</h1>
     <div layout:fragment="content">
         <h1>GDV.XPort-Services</h1>
         <p>
