--- a/service/src/main/resources/templates/fragments/head.html
+++ b/service/src/main/resources/templates/fragments/head.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head th:fragment="head">
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link rel="shortcut icon" href="../static/css/favicon.ico" th:href="@{/css/favicon.ico}"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" />
     <link rel="stylesheet" href="../static/css/theme.css" th:href="@{/css/theme.css}" />
-    <link rel="shortcut icon" type="image/png" href="/favicon.ico" th:href="@{/favicon.ico}" />
 </head>
 </html>
