--- a/service/src/main/resources/templates/fragments/navbar.html
+++ b/service/src/main/resources/templates/fragments/navbar.html
@@ -8,7 +8,7 @@
                 <a class="navbar-brand" href="#">GDV.XPort-Services</a>
             </div>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
+                <li class="active"><a href="index.html" th:href="@{/}"><span class="glyphicon glyphicon-home"></span> Home</a></li>
                 <li><a href="#">Validierung</a></li>
                 <li><a href="#">Formattierung</a></li>
             </ul>
