info icon with link to GitHub page added

--- a/service/src/main/resources/templates/fragments/navbar.html
+++ b/service/src/main/resources/templates/fragments/navbar.html
@@ -12,6 +12,9 @@
                 <li><a href="#">Validierung</a></li>
                 <li><a href="#">Formattierung</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="https://github.com/oboehm/gdv.xport" title="zur Projekt-Seite auf GitHub"><span class="glyphicon glyphicon-info-sign"/></a></li>
+            </ul>
         </div>
     </nav>
 </div>
