first prototype of validate page added

--- a/service/src/main/resources/templates/fragments/navbar.html
+++ b/service/src/main/resources/templates/fragments/navbar.html
@@ -9,7 +9,7 @@
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html" th:href="@{/}"><span class="glyphicon glyphicon-home"></span> Home</a></li>
-                <li><a href="#">Validierung</a></li>
+                <li><a href="validate.html">Validierung</a></li>
                 <li><a href="#">Formattierung</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
