Swagger-UI integrated for REST API Doc

--- a/service/src/main/resources/templates/index.html
+++ b/service/src/main/resources/templates/index.html
@@ -23,6 +23,13 @@
             die darin enhaltene Java-API &uuml;ber REST-Services auch f&uuml;r andere
             Sprachen an.
         </p>
+        <p>
+            Die Dokumentation zu den REST-Services kann &uuml;ber das Buch-Symbol
+            <a href="/swagger-ui.html"><span class="glyphicon glyphicon-book"></span></a> oben rechts
+            aufgerufen werden. Auf Wunsch und f&uuml;r die Auswertung durch
+            andere Programme ist sie im JSON-Format &uuml;ber
+            <a href="/v2/api-docs">/v2/api-docs</a> abrufbar.
+        </p>
     </div>
 </div>
 </body>
