--- a/service/src/main/resources/templates/fragments/navbar.html
+++ b/service/src/main/resources/templates/fragments/navbar.html
@@ -13,7 +13,7 @@
                 <li><a href="#">Formattierung</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/v2/api-docs" title="REST API-Doc"><span class="glyphicon glyphicon-book"></span></a></li>
+                <li><a href="/swagger-ui.html" title="REST API-Doc"><span class="glyphicon glyphicon-book"></span></a></li>
                 <li><a href="https://github.com/oboehm/gdv.xport" title="zur Projekt-Seite auf GitHub"><span class="glyphicon glyphicon-info-sign"></span></a></li>
             </ul>
         </div>
