unit test for DefaultDatenpaketService added

--- a/service/src/main/resources/templates/validate.html
+++ b/service/src/main/resources/templates/validate.html
@@ -24,7 +24,7 @@
                     </div>
                     <div class="text-center">
                         <a class="btn btn-default" href="validate.html" th:href="@{/validate}">Abbrechen</a>
-                        <button type="submit" class="btn btn-danger">Senden</button>
+                        <button type="submit" class="btn btn-primary">Senden</button>
                     </div>
                 </form>
             </div>
