GET via validate.html works now

--- a/service/src/main/resources/templates/validate.html
+++ b/service/src/main/resources/templates/validate.html
@@ -17,10 +17,11 @@
                 Hier&uuml;ber k&ouml;nnen Sie bestehende GDV-Datens&auml;tze validieren.
             </p>
             <div class="panel-body">
-                <form id="validierung" action="#" th:action="@{/Datenpakete/validate}" method="get">
+                <form id="validierung" action="#" th:action="@{/Datenpakete/validate}" th:object="${uri}" method="get">
                     <div class="form-group">
                         <label class="control-label" >URI:</label>
-                        <input type="text" class="form-control" value="http://www.gdv-online.de/vuvm/musterdatei_bestand/musterdatei_041222.txt" />
+                        <input type="text" class="form-control" name="uri"
+                               value="http://www.gdv-online.de/vuvm/musterdatei_bestand/musterdatei_041222.txt" />
                     </div>
                     <div class="text-center">
                         <a class="btn btn-default" href="validate.html" th:href="@{/validate}">Abbrechen</a>
