th:object removed

--- a/service/src/main/resources/templates/validate.html
+++ b/service/src/main/resources/templates/validate.html
@@ -17,7 +17,7 @@
                 Hier&uuml;ber k&ouml;nnen Sie bestehende GDV-Datens&auml;tze validieren.
             </p>
             <div class="panel-body">
-                <form id="validierung" action="#" th:action="@{/Datenpakete/validate}" th:object="${uri}" method="get">
+                <form id="validierung" action="#" th:action="@{/Datenpakete/validate}" method="get">
                     <div class="form-group">
                         <label class="control-label" >URI:</label>
                         <input type="text" class="form-control" name="uri"
