--- a/service/src/main/resources/templates/validate.html
+++ b/service/src/main/resources/templates/validate.html
@@ -17,7 +17,8 @@
                 Hier&uuml;ber k&ouml;nnen Sie bestehende GDV-Datens&auml;tze validieren.
             </p>
             <div class="panel-body">
-                <form id="validierung" action="#" th:action="@{/Datenpakete/validate}" method="get">
+                <!-- URI validieren -->
+                <form id="validierungURI" action="#" th:action="@{/Datenpakete/validate}" method="get">
                     <div class="form-group">
                         <label class="control-label" >URI:</label>
                         <input type="text" class="form-control" name="uri"
@@ -26,6 +27,27 @@
                     <div class="text-center">
                         <a class="btn btn-default" href="validate.html" th:href="@{/validate}">Abbrechen</a>
                         <button type="submit" class="btn btn-primary">Senden</button>
+                    </div>
+                </form>
+                <!-- Text validieren -->
+                <form id="validierungText" action="#" th:action="@{/Datenpakete/validate}" method="post">
+                    <div class="form-group">
+                        <label class="control-label" >Text:</label>
+                        <textarea class="form-control" name="text">00019999 XXX Versicherung AG...</textarea>
+                    </div>
+                    <div class="text-center">
+                        <a class="btn btn-default" href="validate.html" th:href="@{/validate}">Abbrechen</a>
+                        <button type="submit" class="btn btn-primary">Senden</button>
+                    </div>
+                </form>
+                <!-- Datei validieren -->
+                <form id="validierungFile" action="#" th:action="@{/Datenpakete/validate}" method="post" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <label class="control-label" >Datei:</label>
+                        <input type="file" name="file" />
+                    </div>
+                    <div class="text-center">
+                        <button type="submit" class="btn btn-primary" value="Upload">OK</button>
                     </div>
                 </form>
             </div>
