--- a/service/src/main/resources/templates/format.html
+++ b/service/src/main/resources/templates/format.html
@@ -18,18 +18,33 @@
             </p>
             <div class="panel-body">
                 <!-- URI formattieren -->
-                <form id="inputURI" action="#" th:action="@{/Datenpakete/format}" method="get">
+                <form id="inputURI" action="#" th:action="@{/Datenpakete/format.html}" method="get">
                     <div class="form-group">
                         <label class="control-label" >URI:</label>
-                        <input type="text" class="form-control" name="uri"
+                        <input type="text" class="form-control" title="URI" name="uri"
                                value="http://www.gdv-online.de/vuvm/musterdatei_bestand/musterdatei_041222.txt" />
                     </div>
                     <div class="text-center">
-                        <a class="btn btn-default" href="validate.html" th:href="@{/validate}">Abbrechen</a>
+                        <a class="btn btn-default" href="format.html" th:href="@{/validate}">Abbrechen</a>
                         <button type="submit" class="btn btn-primary">Senden</button>
                     </div>
                 </form>
                 <!-- TODO: Text formattieren -->
+                <form id="inputText" action="#" th:action="@{/Datenpakete/format.html}" method="post">
+                    <div class="form-group">
+                        <label class="control-label">Text:</label>
+                        <!-- TODO: hier muessen wir noch die Textarea als Body und nicht als Parameter schicken -->
+                        <textarea class="form-control" title="Datenpaket" name="text">0001HelloWorld                         Test-Adressat                 1302201413022014845/6666662.12.12.2                                                            1.41.4                                                      1.1                            1
+0001HelloWorld                         Test-Adressat                 1302201413022014845/666666                           1.2                        1.2                           1.2                                                                         2
+0001HelloWorld                         Test-Adressat                 1302201413022014845/666666                                                                                                                                                                3
+99990000000000845/66666600000000000000000000000000000+00000000000000+00000000000000+00000000000000+
+</textarea>
+                    </div>
+                    <div class="text-center">
+                        <a class="btn btn-default" href="format.html" th:href="@{/validate}">Abbrechen</a>
+                        <button type="submit" class="btn btn-primary">Senden</button>
+                    </div>
+                </form>
                 <!-- TODO: Datei validieren -->
             </div>
         </div>
