--- a/service/src/main/resources/templates/index.html
+++ b/service/src/main/resources/templates/index.html
@@ -28,7 +28,8 @@
             <a href="/swagger-ui.html"><span class="glyphicon glyphicon-book"></span></a> oben rechts
             aufgerufen werden. Auf Wunsch und f&uuml;r die Auswertung durch
             andere Programme ist sie im JSON-Format &uuml;ber
-            <a href="/v2/api-docs">/v2/api-docs</a> abrufbar.
+            <a href="/v2/api-docs">/v2/api-docs</a> und online als
+            <a href="swagger-ui.html">Swagger-Doku</a> abrufbar.
         </p>
     </div>
 </div>
