--- a/service/src/main/resources/templates/format.html
+++ b/service/src/main/resources/templates/format.html
@@ -18,14 +18,23 @@
             </p>
             <div class="panel-body">
                 <!-- URI formattieren -->
-                <form id="inputURI" action="#" th:action="@{/Datenpakete/format.html}" method="get">
+                <form id="inputURI" action="#" th:action="@{/Datenpakete/format}" method="get">
                     <div class="form-group">
                         <label class="control-label" >URI:</label>
                         <input type="text" class="form-control" title="URI" name="uri"
                                value="http://www.gdv-online.de/vuvm/musterdatei_bestand/musterdatei_041222.txt" />
                     </div>
+                    <div class="form-group">
+                        <label class="control-label">Format:</label>
+                        <select class="form-control" title="Format-Typ" name="type">
+                            <option>HTML</option>
+                            <option>XML</option>
+                            <option>CSV</option>
+                            <option>JSON</option>
+                        </select>
+                    </div>
                     <div class="text-center">
-                        <a class="btn btn-default" href="format.html" th:href="@{/validate}">Abbrechen</a>
+                        <a class="btn btn-default" href="format.html" th:href="@{/format}">Abbrechen</a>
                         <button type="submit" class="btn btn-primary">Senden</button>
                     </div>
                 </form>
@@ -50,7 +59,7 @@
                         </select>
                     </div>
                     <div class="text-center">
-                        <a class="btn btn-default" href="format.html" th:href="@{/validate}">Abbrechen</a>
+                        <a class="btn btn-default" href="format.html" th:href="@{/format}">Abbrechen</a>
                         <button type="submit" class="btn btn-primary">Senden</button>
                     </div>
                 </form>
