--- a/service/src/main/resources/templates/format.html
+++ b/service/src/main/resources/templates/format.html
@@ -38,7 +38,7 @@
                         <button type="submit" class="btn btn-primary">Senden</button>
                     </div>
                 </form>
-                <!-- TODO: Text formattieren -->
+                <!-- Text formattieren -->
                 <form id="inputText" action="#" th:action="@{/Datenpakete/format}" method="post">
                     <div class="form-group">
                         <label class="control-label">Text:</label>
@@ -63,7 +63,26 @@
                         <button type="submit" class="btn btn-primary">Senden</button>
                     </div>
                 </form>
-                <!-- TODO: Datei validieren -->
+                <!-- Datei formattieren -->
+                <form id="formatFile" th:action="@{/Datenpakete/formatUploaded}" method="post" enctype="multipart/form-data">
+                    <div class="form-group">
+                        <label class="control-label" >Datei:</label>
+                        <input type="file" name="file" />
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">Format:</label>
+                        <select class="form-control" title="Format-Typ" name="type">
+                            <option>HTML</option>
+                            <option>XML</option>
+                            <option>CSV</option>
+                            <option>JSON</option>
+                        </select>
+                    </div>
+                    <div class="text-center">
+                        <a class="btn btn-default" href="validate.html" th:href="@{/format}">Abbrechen</a>
+                        <button type="submit" class="btn btn-primary" value="Upload">Senden</button>
+                    </div>
+                </form>
             </div>
         </div>
     </div>
