--- a/service/src/main/resources/templates/validate.html
+++ b/service/src/main/resources/templates/validate.html
@@ -18,7 +18,7 @@
             </p>
             <div class="panel-body">
                 <!-- URI validieren -->
-                <form id="validierungURI" action="#" th:action="@{/Datenpakete/validate}" method="get">
+                <form id="validierungURI" action="#" th:action="@{/api/v1/validate}" method="get">
                     <div class="form-group">
                         <label class="control-label" >URI:</label>
                         <input type="text" class="form-control" name="uri"
@@ -30,7 +30,7 @@
                     </div>
                 </form>
                 <!-- Text validieren -->
-                <form id="validierungText" action="#" th:action="@{/Datenpakete/validate}" method="post">
+                <form id="validierungText" action="#" th:action="@{/api/v1/validate}" method="post">
                     <div class="form-group">
                         <label class="control-label">Text:</label>
                         <!-- TODO: hier muessen wir noch die Textarea als Body und nicht als Parameter schicken -->
@@ -46,7 +46,7 @@
                     </div>
                 </form>
                 <!-- Datei validieren -->
-                <form id="validierungFile" th:action="@{/Datenpakete/validateUploaded}" method="post" enctype="multipart/form-data">
+                <form id="validierungFile" th:action="@{/api/v1/validateUploaded}" method="post" enctype="multipart/form-data">
                     <div class="form-group">
                         <label class="control-label" >Datei:</label>
                         <input type="file" name="file" />
