--- a/service/src/main/resources/templates/validate.html
+++ b/service/src/main/resources/templates/validate.html
@@ -30,7 +30,7 @@
                     </div>
                 </form>
                 <!-- Text validieren -->
-                <form id="validierungText" action="#" th:action="@{/api/v1/validate}" method="post">
+                <form id="validierungText" action="#" th:action="@{/api/v1/Abweichungen}" method="post">
                     <div class="form-group">
                         <label class="control-label">Text:</label>
                         <!-- TODO: hier muessen wir noch die Textarea als Body und nicht als Parameter schicken -->
