"validate" get request renamed to "Abweichungen"

--- a/service/src/main/resources/templates/validate.html
+++ b/service/src/main/resources/templates/validate.html
@@ -18,7 +18,7 @@
             </p>
             <div class="panel-body">
                 <!-- URI validieren -->
-                <form id="validierungURI" action="#" th:action="@{/api/v1/validate}" method="get">
+                <form id="validierungURI" action="#" th:action="@{/api/v1/Abweichungen}" method="get">
                     <div class="form-group">
                         <label class="control-label" >URI:</label>
                         <input type="text" class="form-control" name="uri"
