--- a/service/src/main/resources/templates/index.html
+++ b/service/src/main/resources/templates/index.html
@@ -17,10 +17,11 @@
 <div class="container">
     <div layout:fragment="header"> </div>
     <div layout:fragment="content">
-        <h1>GDV.XPort-Services</h1>
+        <h1>GDV.XPort-Services <span th:text="${appVersion}"></span></h1>
         <p>
-            Die GDV.XPort-Services bauen auf der gdv.xport-Library auf und bieten
-            die darin enhaltene Java-API &uuml;ber REST-Services auch f&uuml;r andere
+            Die GDV.XPort-Services bauen auf der
+            <a href="https://github.com/oboehm/gdv.xport/tree/master/lib">gdv.xport-Library</a>
+            auf und bieten die darin enhaltene Java-API &uuml;ber REST-Services auch f&uuml;r andere
             Sprachen an.
         </p>
         <p>
