Aktualisierung auf Swagger 3.0

--- a/service/src/main/resources/templates/index.html
+++ b/service/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-      xsi:schemaLocation="http://www.ultraq.net.nz/thymeleaf/layout ">
+      xsi:schemaLocation="http://www.ultraq.net.nz/thymeleaf/layout " lang="de">
 
 <head lang="de">
     <title>gdv.xport</title>
@@ -26,11 +26,11 @@
         </p>
         <p>
             Die Dokumentation zu den REST-Services kann &uuml;ber das Buch-Symbol
-            <a href="/swagger-ui.html"><span class="glyphicon glyphicon-book"></span></a> oben rechts
+            <a href="/swagger-ui/"><span class="glyphicon glyphicon-book"></span></a> oben rechts
             aufgerufen werden. Auf Wunsch und f&uuml;r die Auswertung durch
             andere Programme ist sie im JSON-Format &uuml;ber
             <a href="/v2/api-docs">/v2/api-docs</a> und online als
-            <a href="swagger-ui.html">Swagger-Doku</a> abrufbar.
+            <a href="swagger-ui/">Swagger-Doku</a> abrufbar.
         </p>
     </div>
 </div>
