--- a/service/src/main/resources/templates/fragments/navbar.html
+++ b/service/src/main/resources/templates/fragments/navbar.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml" lang="de">
 <body>
 <div th:fragment="navbar">
     <nav class="navbar navbar-default">
@@ -13,7 +13,7 @@
                 <li><a href="format.html">Formattierung</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/swagger-ui.html" title="REST API-Doc"><span class="glyphicon glyphicon-book"></span></a></li>
+                <li><a href="/swagger-ui/" title="REST API-Doc"><span class="glyphicon glyphicon-book"></span></a></li>
                 <li><a href="https://github.com/oboehm/gdv.xport" title="zur Projekt-Seite auf GitHub"><span class="glyphicon glyphicon-info-sign"></span></a></li>
             </ul>
         </div>
