fix typo Formattierung

--- a/service/src/main/resources/templates/format.html
+++ b/service/src/main/resources/templates/format.html
@@ -5,7 +5,7 @@
       xsi:schemaLocation="http://www.ultraq.net.nz/thymeleaf/layout" >
 
 <head lang="de">
-    <title>Formattierung</title>
+    <title>Formatierung</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"/>
@@ -16,7 +16,7 @@
     <div class="container">
         <div layout:fragment="header"> </div>
         <div layout:fragment="content">
-            <h1>Formattierung</h1>
+            <h1>Formatierung</h1>
             <p>
                 Hier&uuml;ber k&ouml;nnen Sie bestehende GDV-Datens&auml;tze in verschiedenen Formaten ausgeben lassen.
             </p>
