--- a/service/src/main/resources/templates/fragments/navbar.html
+++ b/service/src/main/resources/templates/fragments/navbar.html
@@ -10,7 +10,7 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html" th:href="@{/}"><span class="glyphicon glyphicon-home"></span> Home</a></li>
                 <li><a href="validate.html">Validierung</a></li>
-                <li><a href="format.html">Formattierung</a></li>
+                <li><a href="format.html">Formatierung</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/swagger-ui.html" title="REST API-Doc"><span class="glyphicon glyphicon-book"></span></a></li>
