Konfig-Anpassungen für SpringDoc

--- a/service/src/main/resources/templates/index.html
+++ b/service/src/main/resources/templates/index.html
@@ -32,6 +32,15 @@
             <a href="/v2/api-docs">/v2/api-docs</a> und online als
             <a href="swagger-ui/">Swagger-Doku</a> abrufbar.
         </p>
+        <dl>
+            <dt>Hinweis:</dt>
+            <dd>
+                Wenn beim Aufuf der <a href="swagger-ui/">Swagger-Doku</a>
+                ein <i>"Failed to load remote configuration"</i> kommt,
+                einfach <code>"/v3/api-docs"</code> im Eingabefeld eingeben und
+                <b>Explore</b> dr&uuml;cken.
+            </dd>
+        </dl>
     </div>
 </div>
 </body>
