Update auf Spring-Boot 3.0

--- a/service/src/main/resources/templates/index.html
+++ b/service/src/main/resources/templates/index.html
@@ -26,16 +26,16 @@
         </p>
         <p>
             Die Dokumentation zu den REST-Services kann &uuml;ber das Buch-Symbol
-            <a href="/swagger-ui/"><span class="glyphicon glyphicon-book"></span></a> oben rechts
+            <a href="/swagger-ui/index.html"><span class="glyphicon glyphicon-book"></span></a> oben rechts
             aufgerufen werden. Auf Wunsch und f&uuml;r die Auswertung durch
             andere Programme ist sie im JSON-Format &uuml;ber
             <a href="/v3/api-docs">/v3/api-docs</a> und online als
-            <a href="swagger-ui/">Swagger-Doku</a> abrufbar.
+            <a href="swagger-ui/index.html">Swagger-Doku</a> abrufbar.
         </p>
         <dl>
             <dt>Hinweis:</dt>
             <dd>
-                Wenn beim Aufuf der <a href="swagger-ui/">Swagger-Doku</a>
+                Wenn beim Aufuf der <a href="swagger-ui/index.html">Swagger-Doku</a>
                 ein <i>"Failed to load remote configuration"</i> kommt,
                 einfach <code>"/v3/api-docs"</code> im Eingabefeld eingeben und
                 <b>Explore</b> dr&uuml;cken.
